// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> check how renders should render with Step1 by default 1`] = `
<DocumentFragment>
  .c0 {
  text-align: left;
}

.c0 .progress-bar-box {
  padding: 0 2.4rem;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

.c7 .formik-form {
  position: relative;
  height: 46rem;
}

.c18 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
  cursor: not-allowed;
}

.c18:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c18:hover {
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c15 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 2.4rem;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  text-align: justify;
  font-size: 1.3rem;
  margin-top: calc(-1.2rem - 0.4rem);
}

.c1 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c2 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c2 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c2 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c2 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c2 .step-line-fill.active {
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2.4rem;
}

.c10 .select {
  font-size: 1.4rem;
}

.c10 .textarea {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  outline: none;
  font-size: 1.4rem;
  font-family: inherit;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  resize: none;
}

.c10 .textarea::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c10 .textarea:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c10.valid .textarea {
  border-bottom: 3px solid #009680;
}

.c10.invalid .textarea {
  border-bottom: 3px solid #F22613;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2.4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c16 > label {
  cursor: pointer;
  display: inline-block;
  font-size: 1.4rem;
  line-height: 1.5;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0 0 0 calc(2.4rem + 0.8rem);
  position: relative;
}

.c16 > label::before {
  border: 2px solid #1E8BC3;
  border-radius: 1px;
  content: '';
  height: 2.4rem;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 2.4rem;
}

.c16 > label::after {
  color: #1E8BC3;
  content: '✗';
  font-size: 1.7rem;
  font-weight: 700;
  opacity: 0;
  left: 1.2rem;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: opacity 0.1s;
  transition: opacity 0.1s;
}

.c16 > input {
  height: 0;
  opacity: 0;
  margin: 0;
  width: 0;
}

.c16 .select {
  font-size: 1.4rem;
}

.c16 .textarea {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  outline: none;
  font-size: 1.4rem;
  font-family: inherit;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  resize: none;
}

.c16 .textarea::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c16 .textarea:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c16.valid .textarea {
  border-bottom: 3px solid #009680;
}

.c16.invalid .textarea {
  border-bottom: 3px solid #F22613;
}

.c14 {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  color: #000;
  font-size: 1.3rem;
  font-family: inherit;
  outline: none;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  width: 100%;
}

.c14::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c14:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c9.valid .c13 {
  border-bottom: 3px solid #009680;
}

.c9.invalid .c13 {
  border-bottom: 3px solid #F22613;
}

.c12 {
  font-size: 1.5rem;
  padding-bottom: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c9.valid .c11 {
  color: #009680;
}

.c9.invalid .c11 {
  color: #F22613;
}

<div
    class="c0"
  >
    <h3
      class="c1"
      font-size=""
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="c2"
      >
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-visible"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-visible"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="c8"
          data-testid="Step1"
          style="opacity: 0;"
        >
          <div
            class="c9 c10"
            type="email"
          >
            <label
              class="c11 c12"
              for="email"
            >
              Email
            </label>
            <input
              autocomplete="email"
              class="c13 c14"
              data-testid="Step1-email"
              id="email"
              name="email"
              placeholder="Your email address"
              type="email"
              value=""
            />
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            We will send verification link to this email, so make sure it is correct. If you provide someone else's email, that person will have access to that account.
          </span>
          <div
            class="c9 c16"
            type="checkbox"
          >
            <label
              class="c11 c12"
              for="hideEmail"
            >
              Hide my email address from others
            </label>
            <input
              class="c13 c14"
              data-testid="Step1-hideEmail"
              id="hideEmail"
              name="hideEmail"
              type="checkbox"
              value="false"
            />
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Email is visible to everyone by default. You can hide it from others (it will still be visible to people who will place order with you)
          </span>
          <div
            class="c9 c10"
            type="text"
          >
            <label
              class="c11 c12"
              for="username"
            >
              Username
            </label>
            <input
              autocomplete="username"
              class="c13 c14"
              data-testid="Step1-username"
              id="username"
              name="username"
              placeholder="Your identifier (3-20 characters)"
              type="text"
              value=""
            />
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Username will be visible to everyone and cannot be changed
          </span>
          <div
            class="c9 c10"
            type="password"
          >
            <label
              class="c11 c12"
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="off"
              class="c13 c14"
              data-testid="Step1-password"
              id="password"
              name="password"
              placeholder="Secure password (7-64 characters)"
              type="password"
              value=""
            />
          </div>
          <div
            class="c17"
          >
            <button
              class="c18"
              color="blue"
              data-testid="Step1-next-btn"
              disabled=""
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Signup /> check how renders should render with Step2 1`] = `
<DocumentFragment>
  .c0 {
  text-align: left;
}

.c0 .progress-bar-box {
  padding: 0 2.4rem;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

.c7 .formik-form {
  position: relative;
  height: 46rem;
}

.c20 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
  cursor: not-allowed;
}

.c20:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c20:hover {
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
}

.c19 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c19:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c15 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 2.4rem;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  text-align: justify;
  font-size: 1.3rem;
  margin-top: calc(-1.2rem - 0.4rem);
}

.c1 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c2 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c2 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c2 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c2 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c2 .step-line-fill.active {
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2.4rem;
}

.c10 .select {
  font-size: 1.4rem;
}

.c10 .textarea {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  outline: none;
  font-size: 1.4rem;
  font-family: inherit;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  resize: none;
}

.c10 .textarea::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c10 .textarea:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c10.valid .textarea {
  border-bottom: 3px solid #009680;
}

.c10.invalid .textarea {
  border-bottom: 3px solid #F22613;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2.4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c17 > label {
  cursor: pointer;
  display: inline-block;
  font-size: 1.4rem;
  line-height: 1.5;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0 0 0 calc(2.4rem + 0.8rem);
  position: relative;
}

.c17 > label::before {
  border: 2px solid #1E8BC3;
  border-radius: 1px;
  content: '';
  height: 2.4rem;
  left: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 2.4rem;
}

.c17 > label::after {
  color: #1E8BC3;
  content: '✗';
  font-size: 1.7rem;
  font-weight: 700;
  opacity: 0;
  left: 1.2rem;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: opacity 0.1s;
  transition: opacity 0.1s;
}

.c17 > input {
  height: 0;
  opacity: 0;
  margin: 0;
  width: 0;
}

.c17 .select {
  font-size: 1.4rem;
}

.c17 .textarea {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  outline: none;
  font-size: 1.4rem;
  font-family: inherit;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  resize: none;
}

.c17 .textarea::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c17 .textarea:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c17.valid .textarea {
  border-bottom: 3px solid #009680;
}

.c17.invalid .textarea {
  border-bottom: 3px solid #F22613;
}

.c14 {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  color: #000;
  font-size: 1.3rem;
  font-family: inherit;
  outline: none;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  width: 100%;
}

.c14::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c14:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c9.valid .c13 {
  border-bottom: 3px solid #009680;
}

.c9.invalid .c13 {
  border-bottom: 3px solid #F22613;
}

.c12 {
  font-size: 1.5rem;
  padding-bottom: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c9.valid .c11 {
  color: #009680;
}

.c9.invalid .c11 {
  color: #F22613;
}

.c16 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c16 > *:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 2.4rem;
}

.c16 > *:last-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="c0"
  >
    <h3
      class="c1"
      font-size=""
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="c2"
      >
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c6"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c4"
              data-testid="ProgressBar-step-box-number-visible"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill"
          />
        </div>
        <div
          class="step-box"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c6"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c4"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="c8"
          data-testid="Step2"
          style="opacity: 1;"
        >
          <div
            class="c9 c10"
            type="text"
          >
            <label
              class="c11 c12"
              for="firstName"
            >
              First name
            </label>
            <input
              autocomplete="given-name"
              class="c13 c14"
              data-testid="Step2-firstName"
              id="firstName"
              name="firstName"
              placeholder="Your first name (up to 60 characters)"
              type="text"
              value=""
            />
          </div>
          <div
            class="c9 c10"
            type="text"
          >
            <label
              class="c11 c12"
              for="lastName"
            >
              Last name
            </label>
            <input
              autocomplete="family-name"
              class="c13 c14"
              data-testid="Step2-lastName"
              id="lastName"
              name="lastName"
              placeholder="Your last name (up to 80 characters)"
              type="text"
              value=""
            />
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Name is visible only to user you will place order with (and you can change it to specific order)
          </span>
          <div
            class="c16"
          >
            <div
              class="c9 c10"
            >
              <label
                class="c11 c12"
                for="phonePrefix"
              >
                Phone number prefix
              </label>
              <div
                class="select css-2b097c-container"
                id="phonePrefix"
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class=" css-yk16xz-control"
                >
                  <div
                    class=" css-g1d714-ValueContainer"
                  >
                    <div
                      class=" css-1wa3eu0-placeholder"
                    >
                      Choose your phone number prefix
                    </div>
                    <div
                      class="css-b8ldur-Input"
                    >
                      <div
                        class=""
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-2-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="phonePrefix"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
            <div
              class="c9 c10"
              type="text"
            >
              <label
                class="c11 c12"
                for="phoneNumber"
              >
                Phone number
              </label>
              <input
                autocomplete="tel-national"
                class="c13 c14"
                data-testid="Step2-phoneNumber"
                id="phoneNumber"
                name="phoneNumber"
                placeholder="Your phone number (numbers, dashes)"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            You can change phone number to specific order
          </span>
          <div
            class="c9 c17"
            type="checkbox"
          >
            <label
              class="c11 c12"
              for="hidePhone"
            >
              Hide my phone number from others
            </label>
            <input
              class="c13 c14"
              data-testid="Step2-hidePhone"
              id="hidePhone"
              name="hidePhone"
              type="checkbox"
              value="false"
            />
          </div>
          <span
            class="c15"
            color=""
            display="block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            Phone number is visible to everyone by default. You can hide it from others (it will still be visible to user who will place order with you and to user you will place order with)
          </span>
          <div
            class="c18"
          >
            <button
              class="c19"
              color="blue"
              data-testid="Step2-previous-btn"
              type="button"
            >
              Previous
            </button>
            <button
              class="c20"
              color="blue"
              data-testid="Step2-next-btn"
              disabled=""
              type="button"
            >
              Next
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Signup /> check how renders should render with Step3 1`] = `
<DocumentFragment>
  .c0 {
  text-align: left;
}

.c0 .progress-bar-box {
  padding: 0 2.4rem;
}

.c8 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

.c7 .formik-form {
  position: relative;
  height: 46rem;
}

.c19 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
  cursor: not-allowed;
}

.c19:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c19:hover {
  background-color: #67809F;
  border-color: #67809F;
  color: #FAFAFA;
}

.c18 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  font-size: 1.4rem;
  padding: 0.8rem 1.2rem;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c18:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c3 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c9 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 2.4rem;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  text-align: justify;
  font-size: 1.3rem;
}

.c1 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 2.4rem;
  max-width: 100%;
  width: 45rem;
}

.c2 .step-box {
  background-color: #FAFAFA;
  border: 3px solid #DADFE1;
  border-radius: 50%;
  color: #BFBFBF;
  height: 3.2rem;
  position: relative;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 3.2rem;
}

.c2 .step-box.active {
  background-color: #FAFAFA;
  border: 3px solid #1E8BC3;
  color: #000;
}

.c2 .step-line {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #DADFE1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  position: relative;
}

.c2 .step-line-fill {
  background-color: #1E8BC3;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.3s;
  transition: width 0.3s;
  width: 0;
}

.c2 .step-line-fill.active {
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #000;
  width: 1.7rem;
  height: 1.7rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 2.4rem;
}

.c11 .select {
  font-size: 1.4rem;
}

.c11 .textarea {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  outline: none;
  font-size: 1.4rem;
  font-family: inherit;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  resize: none;
}

.c11 .textarea::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c11 .textarea:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c11.valid .textarea {
  border-bottom: 3px solid #009680;
}

.c11.invalid .textarea {
  border-bottom: 3px solid #F22613;
}

.c15 {
  border: none;
  border-bottom: 3px solid rgba(0,0,0,0.1);
  color: #000;
  font-size: 1.3rem;
  font-family: inherit;
  outline: none;
  padding: 0 0 0.8rem 0;
  -webkit-transition: border-bottom 0.1s;
  transition: border-bottom 0.1s;
  width: 100%;
}

.c15::-webkit-input-placeholder {
  color: #BFBFBF;
}

.c15:focus {
  border-bottom: 3px solid rgba(0,0,0,0.35);
}

.c10.valid .c14 {
  border-bottom: 3px solid #009680;
}

.c10.invalid .c14 {
  border-bottom: 3px solid #F22613;
}

.c13 {
  font-size: 1.5rem;
  padding-bottom: 0.8rem;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c10.valid .c12 {
  color: #009680;
}

.c10.invalid .c12 {
  color: #F22613;
}

.c16 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.c16 > *:first-child {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 2.4rem;
}

.c16 > *:last-child {
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

<div
    class="c0"
  >
    <h3
      class="c1"
      font-size=""
    >
      Register new account
    </h3>
    <div
      class="progress-bar-box"
    >
      <div
        class="c2"
      >
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              1
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c4"
              data-testid="ProgressBar-step-box-checkmark-visible"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c6"
              data-testid="ProgressBar-step-box-number-hidden"
            >
              2
            </div>
          </span>
        </div>
        <div
          class="step-line"
        >
          <div
            class="step-line-fill active"
          />
        </div>
        <div
          class="step-box active"
        >
          <span
            class="c3"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            <div
              class="c6"
              data-testid="ProgressBar-step-box-checkmark-hidden"
            >
              <div
                class="c5"
                color="#000"
              >
                <svg>
                  check-mark.svg
                </svg>
              </div>
            </div>
            <div
              class="c4"
              data-testid="ProgressBar-step-box-number-visible"
            >
              3
            </div>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7"
      height="46"
    >
      <form
        action="#"
        class="formik-form"
      >
        <div
          class="c8"
          data-testid="Step3"
          style="opacity: 1;"
        >
          <span
            class="c9"
            color=""
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            These data will be visible only to user you will place order with (and you can change it to specific order)
          </span>
          <div
            class="c10 c11"
            type="text"
          >
            <label
              class="c12 c13"
              for="street"
            >
              Street and number
            </label>
            <input
              autocomplete="street-address"
              class="c14 c15"
              data-testid="Step3-street"
              id="street"
              name="street"
              placeholder="Your street and number"
              type="text"
              value=""
            />
          </div>
          <div
            class="c16"
          >
            <div
              class="c10 c11"
              type="text"
            >
              <label
                class="c12 c13"
                for="zipCode"
              >
                Zip code
              </label>
              <input
                autocomplete="postal-code"
                class="c14 c15"
                data-testid="Step3-zipCode"
                id="zipCode"
                name="zipCode"
                placeholder="Your zip code"
                type="text"
                value=""
              />
            </div>
            <div
              class="c10 c11"
              type="text"
            >
              <label
                class="c12 c13"
                for="city"
              >
                City
              </label>
              <input
                autocomplete="address-level2"
                class="c14 c15"
                data-testid="Step3-city"
                id="city"
                name="city"
                placeholder="Your city"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="c10 c11"
          >
            <label
              class="c12 c13"
              for="country"
            >
              Country
            </label>
            <div
              class="select css-2b097c-container"
              id="country"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-yk16xz-control"
              >
                <div
                  class=" css-g1d714-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Choose your country
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class=" css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class=" css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="country"
                type="hidden"
                value=""
              />
            </div>
          </div>
          <span
            class="c9"
            color=""
            display="inline-block"
            overflow="visible"
            size="1"
            spacing="0px"
            transform=""
          >
            We will send verification link to email provided by you. It will be active for 10 minutes, but you will be able to resend the activation link later. If you do not activate your account within 1 hour, account will be deleted permanently
          </span>
          <div
            class="c17"
          >
            <button
              class="c18"
              color="blue"
              data-testid="Step3-previous-btn"
              type="button"
            >
              Previous
            </button>
            <button
              class="c19"
              color="blue"
              disabled=""
              type="submit"
            >
              Finish
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
